adds MML piano example

--- a/example/multi-user-3d-web-experience/server/mml-documents/playground.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/playground.html
@@ -136,6 +136,12 @@
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 11) {
+        mFrame.setAttribute("src", "wss:///mml-documents/piano.html");
+        mFrame.setAttribute("x", x);
+        mFrame.setAttribute("y", mmlDocYPos);
+        mFrame.setAttribute("z", z);
+        mFrame.setAttribute("ry", ry);
+      } else if (i === 12) {
         mFrame.setAttribute("src", "wss:///mml-documents/about-me.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
@@ -150,7 +156,7 @@
     altarsGroup.setAttribute("y", 0);
   }
 
-  placeAltars(altarsGroup, 42, 12);
+  placeAltars(altarsGroup, 42, 13);
 
   addDocuments();
 </script>
