--- a/example/multi-user-3d-web-experience/server/mml-documents/piano.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/piano.html
@@ -1,11 +1,11 @@
-<m-group id="piano-group" sx="0.95" sy="0.45" sz="0.5" y="-1.34" z="-12">
-  <m-group id="piano-keys" x="-13" y="1" z="-3"></m-group>
+<m-group id="piano-group" sx="0.95" sy="0.45" sz="0.5" y="-0.2" z="-1.3" rx="5">
+  <m-group id="piano-keys" x="-8.5" y="1" z="-3"></m-group>
 </m-group>
 
 <script>
   const pianoKeysGroup = document.getElementById("piano-keys");
 
-  const numberOfOctaves = 3;
+  const numberOfOctaves = 2;
 
   const whiteKeyWidth = 1.29;
   const blackKeyOffset = whiteKeyWidth * 0.5 + 0.32;
