renames about-me document to links

--- a/example/multi-user-3d-web-experience/server/mml-documents/playground.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/playground.html
@@ -142,7 +142,7 @@
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 12) {
-        mFrame.setAttribute("src", "wss:///mml-documents/about-me.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/links.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
