updates Links document

--- a/example/multi-user-3d-web-experience/server/mml-documents/links.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/links.html
@@ -67,7 +67,7 @@
   images.add(discordImage);
 
   const discordLink = document.createElement("m-link");
-  discordLink.setAttribute("href", "https://mgz.me/discord");
+  discordLink.setAttribute("href", "http://discord.gg/msquared");
   discordLink.appendChild(discordModel);
 
   wrapper.appendChild(discordLink);
