disables debug for the position probe on agent document

--- a/example/multi-user-3d-web-experience/server/mml-documents/agent.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/agent.html
@@ -15,7 +15,7 @@
     <m-attr-anim attr="y" start="0.2" end="0.35" duration="17000" loop="true" ping-pong="true" easing="easeInOutQuad"></m-attr-anim>
   </m-group>
   <m-chat-probe id="chat" range="10" debug="false"></m-chat-probe>
-  <m-position-probe id="position-probe" range="10" debug="true"></m-position-probe>
+  <m-position-probe id="position-probe" range="10" debug="false"></m-position-probe>
 </m-group>
 <script>
   const apiKey = "OPENAI_API_KEY_GOES_HERE";
